--- a/app/main.html
+++ b/app/main.html
@@ -111,31 +111,31 @@
                 </select>
                 <fieldset class="tab2-fieldset-enabled" data-pickertype='none'>
                   <legend>Instances</legend>
-                  <a onclick="tab2_setItemInstance(0)">Instance</a><br>
+                  <a onclick="tab2_setItemInstance(1)">Instance</a><br>
                 </fieldset>
                 <fieldset data-pickertype='buttontype-simple'>
                   <legend>Instances</legend>
-                  <a onclick="tab2_setItemInstance(0)">Weighted</a><br>
-                  <a onclick="tab2_setItemInstance(1)">Cube</a><br>
-                  <a onclick="tab2_setItemInstance(2)">Sphere</a><br>
+                  <a data-instance-id="0" onclick="tab2_setItemInstance(0)">Weighted</a><br>
+                  <a data-instance-id="1" onclick="tab2_setItemInstance(1)">Cube</a><br>
+                  <a data-instance-id="2" onclick="tab2_setItemInstance(2)">Sphere</a><br>
                 </fieldset>
                 <fieldset data-pickertype='buttontype-advanced'>
                   <legend>Instances</legend>
-                  <a onclick="tab2_setItemInstance(0)">(White) Weighted</a>
-                  <a onclick="tab2_setItemInstance(1)">(Black) Weighted</a><br>
-                  <a onclick="tab2_setItemInstance(2)">(White) Cube</a>
-                  <a onclick="tab2_setItemInstance(3)">(Black) Cube</a><br>
-                  <a onclick="tab2_setItemInstance(4)">(White) Sphere</a>
-                  <a onclick="tab2_setItemInstance(5)">(Black) Sphere</a><br>
+                  <a data-instance-id="0" onclick="tab2_setItemInstance(0)">(White) Weighted</a>
+                  <a data-instance-id="1" onclick="tab2_setItemInstance(1)">(Black) Weighted</a><br>
+                  <a data-instance-id="2" onclick="tab2_setItemInstance(2)">(White) Cube</a>
+                  <a data-instance-id="3" onclick="tab2_setItemInstance(3)">(Black) Cube</a><br>
+                  <a data-instance-id="4" onclick="tab2_setItemInstance(4)">(White) Sphere</a>
+                  <a data-instance-id="5" onclick="tab2_setItemInstance(5)">(Black) Sphere</a><br>
 
                 </fieldset>
                 <fieldset data-pickertype='cubetype'>
                   <legend>Instances</legend>
-                  <a onclick="tab2_setItemInstance(0)">Weighted</a><br>
-                  <a onclick="tab2_setItemInstance(3)">Companion</a><br>
-                  <a onclick="tab2_setItemInstance(4)">Reflective</a><br>
-                  <a onclick="tab2_setItemInstance(1)">Sphere</a><br>
-                  <a onclick="tab2_setItemInstance(2)">Franken</a><br>
+                  <a data-instance-id="0" onclick="tab2_setItemInstance(0)">Weighted</a><br>
+                  <a data-instance-id="1" onclick="tab2_setItemInstance(1)">Companion</a><br>
+                  <a data-instance-id="2" onclick="tab2_setItemInstance(2)">Reflective</a><br>
+                  <a data-instance-id="3" onclick="tab2_setItemInstance(3)">Sphere</a><br>
+                  <a data-instance-id="4" onclick="tab2_setItemInstance(4)">Franken</a><br>
                 </fieldset>
               </td>
             </tr>
